--- a/public/App.css
+++ b/public/App.css
@@ -36,3 +36,56 @@
     transform: rotate(360deg);
   }
 }
+
+.App-stations-list {
+  position: relative;
+  width: 480px;
+  margin: 30px auto 20px auto;
+  background: #fff;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
+
+.App-stations-list ul {
+  list-style: none;
+}
+
+.App-stations-list button {
+  position: absolute;
+  right: 18px;
+  bottom: -18px;
+  background: #f5ba13;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
+
+.App-stations-list li {
+  /* display: inline-block; */
+  font-size: 20px;
+  padding: 20px;
+  /* border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137); */
+  border-bottom: 1px solid #85878a;
+}
+
+.App-stations-list span {
+  position: absolute;
+  right: 18px;
+  /* bottom: 18px; */
+  /* background: #f3ebeb; */
+  color: rgb(247, 9, 9);
+  border: none;
+  /* border-radius: 50%; */
+  width: 36px;
+  height: 36px;
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); */
+  cursor: pointer;
+  outline: none;
+}
