--- a/public/App.css
+++ b/public/App.css
@@ -89,3 +89,13 @@
   cursor: pointer;
   outline: none;
 }
+
+.App-im-list {
+  position: relative;
+  width: 480px;
+  margin: 30px auto 20px auto;
+  background: #fff;
+  padding: 15px;
+  border-radius: 7px;
+  box-shadow: 0 1px 5px rgb(138, 137, 137);
+}
