sprint 1.1 (resolve bugs and polish ui)

--- a/public/App.css
+++ b/public/App.css
@@ -2,41 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 15vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: top;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .App-stations-list {
   position: relative;
   width: 480px;
@@ -92,7 +57,7 @@
 
 .App-im-list {
   position: relative;
-  width: 480px;
+  /* width: 480px; */
   margin: 30px auto 20px auto;
   background: #fff;
   padding: 15px;
