--- a/public/CreateStation.css
+++ b/public/CreateStation.css
@@ -1,7 +1,7 @@
 form.station-row {
     position: relative;
     width: 480px;
-    margin: 30px auto 20px auto;
+    margin: 20px 30px 30px 20px;
     background: #fff;
     padding: 15px;
     border-radius: 7px;
