--- a/public/App.css
+++ b/public/App.css
@@ -57,10 +57,9 @@
 
 .App-im-list {
   position: relative;
-  /* width: 480px; */
-  margin: 20px 30px 30px 20px;
+  margin: 20px auto 30px 20px;
   background: #fff;
-  padding: 15px;
+  padding: 10px;
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
